@@ -21,9 +21,9 @@ use Test::LWP::UserAgent;
 use HTTP::Request::Common;
 use URI;
 
-# I use POST rather than GET everywhere so as to not process the "302
-# Redirect" response.
-my $redirect_url = 'http://httpbin.org/redirect-to?url=http%3A%2F%2Fhttpbin.org%2Fpost';
+# I mostly POST to this URL, rather than using GET, so as to not process the
+# "302 Redirect" response.
+my $redirect_url = 'http://httpbin.org/redirect-to?url=http%3A%2F%2Fhttpbin.org%2Fget';
 
 # allow LWP::UserAgent to carp about unknown constructor arguments
 $^W = 1;
